docs: add docs for CRUD operations
